Activate ActionMode.Callback when tapping list items

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
   <string name="app_name">Batch Uninstaller</string>
+  <string name="action_uninstall">Uninstall</string>
 </resources>
