Displaying number of selected apps and total size selected in contextual action bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
   <string name="app_name">Batch Uninstaller</string>
   <string name="action_uninstall">Uninstall</string>
+  <plurals name="items_selected">
+    <item quantity="one">%d app selected</item>
+    <item quantity="other">%d apps selected</item>
+  </plurals>
 </resources>
